--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-emotion": "^9.1.0",
-    "react-icons-kit": "^1.1.5",
+    "react-icons": "^2.2.7",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "rxjs": "^5.5.7"
@@ -26,6 +26,7 @@
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "ts-loader": "^4.1.0",
+    "typescript": "^2.9.1",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^4.2.0",
     "webpack-cli": "^2.0.13",
