Starting to set-up dependency injection system

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
         "typeRoots": [
             "./typings"        ],
         "allowSyntheticDefaultImports": true,
+        "experimentalDecorators": true
     },
     "include": [
         "src/**/*.ts"
