--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@types/whatwg-fetch": "0.0.33",
+    "core-js": "^2.5.7",
     "emotion": "^9.1.0",
     "npm": "^5.8.0",
     "react": "^16.2.0",
@@ -13,6 +14,7 @@
     "react-icons": "^2.2.7",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
+    "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.7"
   },
   "devDependencies": {
