--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^2.2.7",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
+    "redux-observable": "^0.19.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.7"
   },
