Updated webpack build and tsconfig to have custom import paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,12 @@
         "typeRoots": [
             "./typings"        ],
         "allowSyntheticDefaultImports": true,
-        "experimentalDecorators": true
+        "experimentalDecorators": true,
+        "paths": {
+            "common/*": ["src/common/*"],
+            "board/*": ["src/boards/Board/*"],
+            "task/*": ["src/boards/Task/*"]
+        }
     },
     "include": [
         "src/**/*.ts"
