--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "emotion": "^9.1.0",
     "npm": "^5.8.0",
     "react": "^16.2.0",
+    "react-dnd": "^4.0.5",
+    "react-dnd-html5-backend": "^4.0.5",
     "react-dom": "^16.2.0",
     "react-emotion": "^9.1.0",
     "react-icons": "^2.2.7",
