Created new files and updated folder structure to accomodate login page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
             "@app/common": ["src/common/index.ts"],
             "@app/common/*": ["src/common/*"],
             "@app/board/*": ["src/boards/Board/*"],
-            "@app/task/*": ["src/boards/Task/*"]
+            "@app/task/*": ["src/boards/Task/*"],
+            "@app/login/*": ["src/login/*"]
         }
     },
     "include": [
